--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://roberika.github.io",
+  "homepage": "https://roberika.github.io",
   "base": "/roberika.github.io",
   "name": "roberika.github.io",
   "private": true,
